# Tails

./: .dockerignore  .gitignore  .mutants.yml  Cargo.toml  LICENSE  MUTATION_TESTING_REPORT.md  README.md  install.ps1  install.sh
.github/workflows/: build.yml  release-cli.yml
crates/rag-api/: Cargo.toml  Dockerfile
crates/rag-api/src/: main.rs
crates/rag-cli/: Cargo.toml
crates/rag-cli/src/: main.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: chunk.rs  datadog.rs  domain.rs  lib.rs  openai.rs  planner.rs  qdrant.rs  rag_service.rs  reranker.rs
crates/rag-indexer/: Cargo.toml  Dockerfile
crates/rag-indexer/src/: main.rs
docs/: RELEASE_DOCUMENTATION.md
