[package]
name = "rag-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
rag-core = { path = "../rag-core" }

[dev-dependencies]
