[package]
name = "rag-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
itertools = "0.14"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
async-trait = "0.1"
sha2 = "0.10"
hex   = "0.4"
chrono = "0.4"

[dev-dependencies]
wiremock = "0.6"
