[package]
name = "rag-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json", "gzip", "brotli", "deflate", "stream", "query"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "time"] }
time = { version = "0.3.47", features = ["parsing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
itertools = "0.14.0"
async-trait = "0.1.89"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = "0.4.44"

[dev-dependencies]
wiremock = "0.6.5"
