[package]
name = "rag-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rag-core = { path = "../rag-core" }
futures = "0.3"
serde_json = "1"
chrono = "0.4"
