[package]
name = "rag-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rag-core = { path = "../rag-core" }
futures = "0.3.32"
serde_json = "1.0.149"
chrono = "0.4.44"
